fix(#155): ScoutingIntelBroker — Set.copyOf and extraction comment